Add KendraRankingResponseProcessor (#137) (#143)
* Add KendraRankingResponseProcessor

Signed-off-by: Mingshi Liu <mingshl@amazon.com>

* Add KendraIntelligentClientTestCase

Signed-off-by: Mingshi Liu <mingshl@amazon.com>

---------

Signed-off-by: Mingshi Liu <mingshl@amazon.com>
(cherry picked from commit a698a3c27935458e977539e692903277c509397f)

Co-authored-by: Mingshi Liu <113382730+mingshl@users.noreply.github.com>